fix footer column on smallest screen sizes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -382,6 +382,10 @@ button {
     .newsletter form button {
         width: 100%;
     }
+
+    .footer-section{
+        justify-content: space-evenly;
+    }
 }
 
 @media (max-width: 536px){
